--- a/src/templates/backups/_viewBackup.twig
+++ b/src/templates/backups/_viewBackup.twig
@@ -10,7 +10,7 @@
 {% extends "enupal-paypal/_layouts/base" %}
 {% import "_includes/forms" as forms %}
 {% set crumbs = [
-	{ label: "Backups"|t('enupal-paypal'), url: cpUrl('enupal-paypal/backups') }
+	{ label: "Buttons"|t('enupal-paypal'), url: cpUrl('enupal-paypal/backups') }
 ] %}
 
 {% set title = 'Paypal: '~backup.backupId %}
