Adds Button Element

--- a/src/templates/settings/ftp.twig
+++ b/src/templates/settings/ftp.twig
@@ -52,7 +52,7 @@
 				label: "Host"|t('enupal-paypal'),
 				id: 'ftpHost',
 				name: 'ftpHost',
-				instructions: "The host you want do copy your backups to."|t('enupal-paypal'),
+				instructions: "The host you want do copy your buttons to."|t('enupal-paypal'),
 				value: settings.ftpHost,
 				required: true,
 				autofocus: true,
