--- a/src/templates/settings/general.twig
+++ b/src/templates/settings/general.twig
@@ -33,9 +33,9 @@
 			<hr>
 
 			{{ forms.textField({
-				label: "Amount of backups to keep locally"|t('enupal-paypal'),
+				label: "Amount of buttons to keep locally"|t('enupal-paypal'),
 				id: 'backupsAmount',
-				instructions: 'Keep only a configured amount of backups with status Finished'|t('enupal-paypal'),
+				instructions: 'Keep only a configured amount of buttons with status Finished'|t('enupal-paypal'),
 				name: 'backupsAmount',
 				value: settings.backupsAmount,
 				size: 10,
