--- a/src/templates/settings/objectStorage.twig
+++ b/src/templates/settings/objectStorage.twig
@@ -68,7 +68,7 @@
 				label: "Host"|t('enupal-paypal'),
 				id: 'sosHost',
 				name: 'sosHost',
-				instructions: "The host you want do copy your backups to."|t('enupal-paypal'),
+				instructions: "The host you want do copy your buttons to."|t('enupal-paypal'),
 				value: settings.sosHost,
 				required: true,
 				autofocus: true,
