--- a/src/templates/settings/schedule.twig
+++ b/src/templates/settings/schedule.twig
@@ -31,7 +31,7 @@
 		{% namespace 'settings' %}
 			{{ forms.field({
 				label: "Webhook"|t('enupal-paypal')|upper,
-				instructions: "Enupal PaypalButtons provides you a webhook to schedule your backups, here is an example how to do it with <a target='_blank' href='https://de.wikipedia.org/wiki/Cron'>Cron.</a> Adding one of the following lines to your crontab will execute your backup every morning at 3:10 AM."|t('enupal-paypal'),
+				instructions: "Enupal PaypalButtons provides you a webhook to schedule your buttons, here is an example how to do it with <a target='_blank' href='https://de.wikipedia.org/wiki/Cron'>Cron.</a> Adding one of the following lines to your crontab will execute your backup every morning at 3:10 AM."|t('enupal-paypal'),
 			}, null) }}
 			<hr>
 
