--- a/src/templates/buttons/_viewBackup.twig
+++ b/src/templates/buttons/_viewBackup.twig
@@ -10,7 +10,7 @@
 {% extends "enupal-paypal/_layouts/base" %}
 {% import "_includes/forms" as forms %}
 {% set crumbs = [
-	{ label: "Buttons"|t('enupal-paypal'), url: cpUrl('enupal-paypal/backups') }
+	{ label: "Buttons"|t('enupal-paypal'), url: cpUrl('enupal-paypal/buttons') }
 ] %}
 
 {% set title = 'Paypal: '~backup.backupId %}
@@ -196,7 +196,7 @@
 
 {% block details %}
 	<div>
-		{% include "enupal-paypal/backups/_sidebar/settings" %}
+		{% include "enupal-paypal/buttons/_sidebar/settings" %}
 
 		<div class="deletebackup field">
 			<div class="heading"></div>
@@ -205,7 +205,7 @@
 					<form method="post" accept-charset="UTF-8">
 					{{ csrfInput() }}
 					<input type="hidden" name="id" value="{{backup.id}}">
-					<input type="button" class="btn small formsubmit" value="Delete" data-action="enupal-paypal/backups/delete-backup" data-confirm="Are you sure you want to delete this backup, all of it's files, and all of it's data?" data-redirect="{{('enupal-paypal/backups')|hash}}">
+					<input type="button" class="btn small formsubmit" value="Delete" data-action="enupal-paypal/backups/delete-backup" data-confirm="Are you sure you want to delete this backup, all of it's files, and all of it's data?" data-redirect="{{('enupal-paypal/buttons')|hash}}">
 					</form>
 				</div>
 			</div>
