Adds initial logic for createNewButton

--- a/src/templates/buttons/index.twig
+++ b/src/templates/buttons/index.twig
@@ -9,7 +9,7 @@
 
 {% extends "enupal-paypal/_layouts/elementindex" %}
 {% set title = "Paypal Buttons"|t %}
-{% set elementType = 'enupal\\paypal\\elements\\Paypal' %}
+{% set elementType = 'enupal\\paypal\\elements\\PaypalButton' %}
 {% do view.registerAssetBundle("enupal\\paypal\\assetBundles\\FontAwesomeAsset") %}
 {% block actionButton %}
     <div class="buttons">
