--- a/src/templates/buttons/_edit.twig
+++ b/src/templates/buttons/_edit.twig
@@ -20,15 +20,23 @@
 {% block actionButton %}
     <input type="hidden" name="action" value="enupal-paypal/buttons/save-button">
     {{ redirectInput('enupal-button/buttons') }}
-    <input type="hidden" id="buttonId" name="id" value="{{ button.id is defined ? button.id : '' }}">
+    <input type="hidden" id="buttonId" name="id" value="{{ paypalButton.id is defined ? paypalButton.id : '' }}">
 
     <div class="btngroup submit first">
         <input type="submit" class="btn submit" value="{{ 'Save'|t('enupal-paypal') }}">
-        {% if button.id != null %}
+        {% if paypalButton.id != null %}
             <div class="btn submit menubtn"></div>
             <div class="menu">
                 <ul>
-                    <li><a class="formsubmit" data-redirect="{{('enupal-paypal/button/edit/'~button.id)|hash}}">{{ "Save and continue editing"|t('enupal-paypal') }} <span class="shortcut">⌘S</span></a></li>
+                    <li><a class="formsubmit" data-redirect="{{('enupal-paypal/buttons/edit/'~paypalButton.id)|hash}}">{{ "Save and continue editing"|t('enupal-paypal') }} <span class="shortcut">⌘S</span></a></li>
+                </ul>
+                <hr>
+                <ul>
+                    <li><a class="formsubmit error"
+                           data-action="enupal-paypal/buttons/delete-button"
+                           data-confirm='{{ "Are you sure you want to delete this Paypal Button, and all of it's data?"|t('enupal-paypal') }}'
+                           data-redirect="{{ 'enupal-paypal/buttons'|hash }}">{{ "Delete"|t('enupal-paypal') }}</a>
+                    </li>
                 </ul>
             </div>
         {% endif %}
@@ -37,70 +45,52 @@
 
 {% block content %}
     <input type="hidden" name="action" value="enupal-paypal/buttons/save-button">
-    <input type="hidden" name="handle" value="{{ button.handle }}">
+    <input type="hidden" name="handle" value="{{ paypalButton.handle }}">
     <input type="hidden" name="buttonId" value="{{ buttonId }}">
 
-    {% if namespace is not defined %}{% set namespace = 'fields' %}{% endif %}
-    <div id="fields" class="pane">
-        {{ forms.textField({
-            label: "Amount"|t('enupal-paypal'),
-            instructions: "You can leave it in blank if is a donation"|t('enupal-paypal'),
-            id: 'amount',
-            name: 'amount',
-            value: backup.amount,
-            autofocus: true,
-            first: true,
-            errors: backup.getErrors('amount')
-        }) }}
+    {% namespace 'fields' %}
+        <div id="fields">
 
-        {{ forms.textField({
-            label: "Return URL"|t('enupal-paypal'),
-            instructions: "Redirect the user to this URL when the pay is successfully"|t('enupal-paypal'),
-            id: 'returnUrl',
-            name: 'returnUrl',
-            value: backup.returnUrl,
-            autofocus: true,
-            errors: backup.getErrors('returnUrl')
-        }) }}
+            {{ forms.textField({
+                label: "Return URL"|t('enupal-paypal'),
+                instructions: "Redirect the user to this URL when the pay is successfully"|t('enupal-paypal'),
+                id: 'returnUrl',
+                name: 'returnUrl',
+                value: paypalButton.returnUrl,
+                autofocus: true,
+                errors: paypalButton.getErrors('returnUrl')
+            }) }}
 
-        {{ forms.textField({
-            label: "Cancel URL"|t('enupal-paypal'),
-            instructions: "Redirect the user to this URL when they click the cancel button"|t('enupal-paypal'),
-            id: 'cancelUrL',
-            name: 'cancelUrL',
-            value: backup.cancelUrL,
-            autofocus: true,
-            errors: backup.getErrors('cancelUrL')
-        }) }}
+            {{ forms.textField({
+                label: "Cancel URL"|t('enupal-paypal'),
+                instructions: "Redirect the user to this URL when they click the cancel button"|t('enupal-paypal'),
+                id: 'cancelUrl',
+                name: 'cancelUrl',
+                value: paypalButton.cancelUrl,
+                autofocus: true,
+                errors: paypalButton.getErrors('cancelUrl')
+            }) }}
 
-    </div>
+        </div>
+    {% endnamespace %}
 {% endblock %}
 
 {% block details %}
-    <div>
+    {% namespace 'fields' %}
         {% include "enupal-paypal/buttons/_sidebar/settings" %}
-
-        <div class="deletebackup field">
-            <div class="heading"></div>
-            <div class="input">
-                <div class="right">
-                    <form method="post" accept-charset="UTF-8">
-                        {{ csrfInput() }}
-                        <input type="hidden" name="id" value="{{ backup.id }}">
-                        <input type="button" class="btn small formsubmit"
-                               value="Delete"
-                               data-action="enupal-paypal/buttons/delete-button"
-                               data-confirm="Are you sure you want to delete this Paypal Button, and all of it's data?"
-                               data-redirect="{{ ('enupal-paypal/buttons')|hash }}">
-                    </form>
-                </div>
-            </div>
+        <hr>
+    {% endnamespace %}
+    {% set dateSubmitted = paypalButton.dateCreated|date('F j, Y') %}
+    <div class="meta read-only">
+        <div class="data">
+            <h5 class="heading">{{ "Created"|t('enupal-paypal') }}</h5>
+            <div class="value">{{ dateSubmitted }}</div>
         </div>
     </div>
 {% endblock %}
 
-{% do view.registerAssetBundle("enupal\\backup\\assetbundles\\BackupAsset") %}
-{% do view.registerAssetBundle("enupal\\backup\\assetbundles\\FontAwesomeAsset") %}
+{% do view.registerAssetBundle("enupal\\paypal\\assetbundles\\PaypalButtonAsset") %}
+{% do view.registerAssetBundle("enupal\\paypal\\assetbundles\\FontAwesomeAsset") %}
 {% js %}
     $(document).ready(function() {
     new EnupalPaypal();
