Adds paypal button settings

--- a/src/templates/_frontend/button.twig
+++ b/src/templates/_frontend/button.twig
@@ -9,6 +9,6 @@
     <input name="currency_code" value="{{ button.currency }}" type="hidden">
     <input name="cmd" value="{{ button.cmd }}" type="hidden">
     <input name="business" value="{{ settings.paypalEmail }}" type="hidden">
-    <input name="bn" value="JavaScriptButton_{{ button.type }}" type="hidden">
+    <input name="bn" value="JavaScriptButton_xclick" type="hidden">
     <button class="paypal-button large" type="submit">{{ button.buttonName }}</button>
 </form>
