Fixes small issues

--- a/src/templates/buttons/_edit.twig
+++ b/src/templates/buttons/_edit.twig
@@ -52,8 +52,8 @@
         <div id="fields">
             <div class="field" id="fields-cancelUrl-field">
                 <div class="heading">
-                    <label id="fields-cancelUrl-label" for="fields-cancelUrl">Button Size and type</label>
-                    <div class="instructions"><p>Redirect the user to this URL when they click the cancel button</p>
+                    <label id="fields-cancelUrl-label" for="fields-cancelUrl">{{ "Button size and style"|t('enupal-paypal') }}</label>
+                    <div class="instructions"><p>{{ "An example of how the PayPal button will look"|t('enupal-paypal') }}</p>
                     </div>
                 </div>
                 <div class="input ltr">
