Improves edit button UI

--- a/src/templates/buttons/_edit.twig
+++ b/src/templates/buttons/_edit.twig
@@ -68,7 +68,7 @@
 
         {{ forms.field({
             id: 'size',
-            instructions: '',
+            instructions: 'Customize text or appearance',
             label: 'Button Size'|t('enupal-paypal'),
             errors: paypalButton.getErrors('size'),
         }, sizeInput) }}
