Adds shipping fields

--- a/src/templates/buttons/_edit.twig
+++ b/src/templates/buttons/_edit.twig
@@ -51,8 +51,8 @@
     {% namespace 'fields' %}
         {{ forms.textField({
             first: true,
-            label: "Button Name"|t('enupal-paypal'),
-            instructions: 'What this Paypal Button will be called in the CP. This value will be used to set the <strong>Product Name</strong> in PayPal',
+            label: "Item Name"|t('enupal-paypal'),
+            instructions: 'What this Paypal Button will be called in the CP. This value will be used to set the <strong>Item Name</strong> in PayPal',
             id: 'name',
             name: 'name',
             value: paypalButton.name,
