--- a/src/templates/_frontend/button.twig
+++ b/src/templates/_frontend/button.twig
@@ -1,14 +1,13 @@
-<form class="paypal-button" method="post" action="{{ button.url }}" target="_top">
-    <div id="errorBox" class="hide"></div>
-    <input name="button" value="{{ button.type }}" type="hidden">
+<form class="paypal-button" method="post" action="{{ button.getPaypalUrl() }}" target="_top">
     <input name="item_name" value="{{ button.name }}" type="hidden">
     <input name="amount" value="{{ button.amount }}" type="hidden">
-    <input name="env" value="{{ button.env }}" type="hidden">
+    <input name="notify_url" value="{{ button.getIpnUrl() }}" type="hidden">
     <input name="return" value="{{ button.returnUrl }}" type="hidden">
-    {#<input name="rm" value="2" type="hidden">#}
+    <input name="cancel_return" value="{{ button.cancelUrl }}" type="hidden">
+    <input name="rm" value="2" type="hidden">
     <input name="currency_code" value="{{ button.currency }}" type="hidden">
-    <input name="cmd" value="{{ button.cmd }}" type="hidden">
-    <input name="business" value="{{ settings.paypalEmail }}" type="hidden">
-    <input name="bn" value="JavaScriptButton_xclick" type="hidden">
-    <button class="paypal-button large" type="submit">{{ button.buttonName }}</button>
+    <input name="cmd" value="_xclick" type="hidden">
+    <input name="business" value="{{ button.getBusiness() }}" type="hidden">
+    <input name="bn" value="craft_plugin_paypal" type="hidden">
+    <input style='border: none;' class='paypalbuttonimage' type='image' src='{{ button.getButtonUrl() }}' border='0' name='submit' alt='{{ "PayPal - The safer, easier way to pay online!"|t('enupal-paypal')}}'>
 </form>
