--- a/src/templates/buttons/_edit.twig
+++ b/src/templates/buttons/_edit.twig
@@ -61,7 +61,7 @@
             required: true
         }) }}
         <hr>
-        {% set sizeOptions = craft.enupalPaypal.getSizeOptions() %}
+        {% set sizeOptions = craft.paypalButton.getSizeOptions() %}
         {% set sizeInput %}
             <div class="flex">
                 <div class="textwrapper">
