--- a/src/templates/settings/taxes.twig
+++ b/src/templates/settings/taxes.twig
@@ -10,10 +10,10 @@
 {% extends "enupal-paypal/_layouts/settings" %}
 {% import "_includes/forms" as forms %}
 
-{% set settings = craft.enupalPaypal.getSettings() %}
+{% set settings = craft.paypalButton.getSettings() %}
 {% set fullPageForm = true %}
 {% set saveShortcutRedirect = 'enupal-paypal/settings/taxes' %}
-{% set discountOptions = craft.enupalPaypal.getDiscountOptions() %}
+{% set discountOptions = craft.paypalButton.getDiscountOptions() %}
 
 {% set saveButton %}
     <div class="buttons">
